[package]
name = "carbonmap"
version = "0.1.1"
edition = "2021"

authors = ["Ginger "]
description = "Lock-free concurrent hash map for Rust with zero GC"
license = "MIT"
repository = "https://github.com/nanijnv1/carbonmap"
readme = "README.md"
keywords = ["concurrent", "lock-free", "hashmap", "atomic"]
categories = ["concurrency", "data-structures"]
[dependencies]
parking_lot = "0.12.5"

[dev-dependencies]
criterion = "0.5"
dashmap = "5"
parking_lot = "0.12.5"


[[bench]]
name = "compare"
harness = false